// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`serializeProperties serializeProperties applies \`      \` indentation 1`] = `
"      obj={
        {
          nested: {
            value: 5,
          },
        }
      }
      text="lorem ipsum""
`;

exports[`serializeProperties serializeProperties applies \`    \` indentation 1`] = `
"    obj={
      {
        nested: {
          value: 5,
        },
      }
    }
    text="lorem ipsum""
`;

exports[`serializeProperties serializeProperties applies \`  \` indentation 1`] = `
"  obj={
    {
      nested: {
        value: 5,
      },
    }
  }
  text="lorem ipsum""
`;

exports[`serializeProperties serializeProperties applies \`\` indentation 1`] = `
"obj={
  {
    nested: {
      value: 5,
    },
  }
}
text="lorem ipsum""
`;
